@@ -511,12 +511,13 @@ DECLARE SUB macro_controls ()
 
 '=============== Generic keyval ================
 
-DECLARE FUNCTION player_keyval(key as KBScancode, player as integer = 0, repeat_wait as integer = 0, repeat_rate as integer = 0, check_keyboard as bool = YES, real_keys as bool = NO) as KeyBits
+DECLARE FUNCTION player_keyval(key as KBScancode, player as integer = 0, byref down_ms as integer = 0, repeat_wait as integer = 0, repeat_rate as integer = 0, check_keyboard as bool = YES, real_keys as bool = NO) as KeyBits
 DECLARE FUNCTION real_keyval (key as KBScancode) as KeyBits
 DECLARE FUNCTION keyval (key as KBScancode) as KeyBits
 DECLARE FUNCTION carray alias "KEYVAL" (key as KBScancode) as KeyBits
 DECLARE FUNCTION slowkey (key as KBScancode, ms as integer) as bool
 DECLARE FUNCTION getinputtext () as string
+DECLARE FUNCTION keypress_time (key as KBScancode, player as integer = 0, real_keys as bool = NO) as integer
 
 '================== Joystick ===================
 
