@@ -168,7 +168,7 @@ same level.)
 	~ Monorail guy, Simpsons
 
 -->
-<plotscript version="wip" datecode="2022-06-02">
+<plotscript version="wip" datecode="2022-06-03">
 
 	<section title="Declarations">
 		<command id="plotscript">
@@ -970,6 +970,8 @@ wait for hero (me) # wait until he stops</example>
 				If you do not specify <p>key</p>, then <ref>anykey</ref> will be used.
 				<lb/>
 				<ref>anykey</ref> waits for any keyboard or joystick button,
+				(except Numlock, Capslock and Scrolllock, or any joystick buttons that have no
+				builtin meaning e.g. X/Y/L1/L2/R1/R2)
 				and also waits for a mouse click if "'any key', etc, include mouse clicks" is
 				turned on in the Mouse Controls menu.
 				<p>usekey</p> will wait for Space, Ctrl or Enter, joystick use key, and optionally left click;
@@ -4918,6 +4920,8 @@ end
 				<note>
 					This command is an alternative to <ref>keypress</ref> or <ref>newkeypress</ref>;
 					see <secref>Keyboard Input</secref> for usage hints.
+					<lb/>
+					You can use <ref>keypresstime</ref> to see how long a key/button has been down.
 				</note>
 				<note>
 					Previously you couldn't use virtual scancodes like <ref>usekey</ref>,
@@ -4934,6 +4938,7 @@ end
 				<ref>keypress</ref>
 				<ref>newkeypress</ref>
 				<ref>keyval</ref>
+				<ref>keypresstime</ref>
 			</seealso>
 		</command>
 		<command id="keypress">
@@ -4970,6 +4975,7 @@ end
 				<ref>keyispressed</ref>
 				<ref>newkeypress</ref>
 				<ref>keyval</ref>
+				<ref>keypresstime</ref>
 			</seealso>
 		</command>
 		<command id="newkeypress">
@@ -4995,6 +5001,7 @@ end
 				<ref>keyispressed</ref>
 				<ref>keypress</ref>
 				<ref>keyval</ref>
+				<ref>keypresstime</ref>
 			</seealso>
 		</command>
 		<command id="keyval">
@@ -5036,8 +5043,37 @@ end
 				<ref>keyispressed</ref>
 				<ref>keypress</ref>
 				<ref>newkeypress</ref>
+				<ref>keypresstime</ref>
 			</seealso>
 		</command>
+		<command id="keypresstime">
+			<canon>keypress time (scancode, player)</canon>
+			<shortname>keypress time</shortname>
+			<description>
+				Returns how long a key or button has been held down, in milliseconds (thousandths of a second), or 0 if the key isn't pressed.
+				<lb/>
+				The <p>scancode</p> argument is a <ref>scancode</ref> such as a keyboard key (e.g. <tt>key:ctrl</tt>)
+				a joystick button (e.g. <tt>joy:left</tt>), or a virtual scancode such as
+				<ref>usekey</ref> (see <ref>controlcodes</ref>).
+				If you use a scancode that refers to multiple keys/buttons
+				(e.g. <tt>usekey</tt> or <tt>anykey</tt>)
+				then the longest time that any of those keys has been held down is returned.
+				<lb/>
+				<p>player</p> is an optional <ref>playernumber</ref>,
+				normally only used with <tt>joy:...</tt> joystick scancodes
+				or <ref>controlcodes</ref>, and tells which player's controller to read.
+				By default it checks for a button press on any plugged-in controller.
+				<lb/>
+				If a fast keypress happens in less than a tick and the key is already up again
+				then <ref>keyispressed</ref> can return <tt>false</tt> and <p>keypress time</p>
+				return <tt>0</tt> although <ref>keypress</ref> returns <tt>true</tt>.
+			</description>
+			<seealso>
+				<ref>keyispressed</ref>
+				<ref>keypress</ref>
+			</seealso>
+		</command>
+
 		<command id="lastascii">
 			<canon>last ascii</canon>
 			<shortname>last ascii</shortname>
@@ -13013,7 +13049,9 @@ joy:button 17      # Warning: joy:button17 is not joy:button16 + 1! All other bu
 joy:button 32
 
 #  Virtual scancodes:
-any key            # Any keyboard key or joystick button (including joystick left/right/up/down),
+any key            # Any keyboard key except Numlock, Capslock and Scrolllock, or any joystick button
+                   # (including joystick left/right/up/down) that has a builtin meaning like 'use'
+                   # (e.g. X/Y/L1/L2/R1/R2/Select aren't included),
                    # and also any mouse button if "'any key', etc, include mouse clicks" is turned on in
 		   # the Mouse Controls menu.
 up key             # Up key on the keyboard, or on any joystick
